[gd_scene load_steps=10 format=3 uid="uid://dvu3y6ae54p1d"]

[ext_resource type="Script" path="res://Scripts/Video.gd" id="1_byv3s"]
[ext_resource type="PackedScene" uid="uid://cptggopdncbwu" path="res://Scenes/Utility/crtOverlay.tscn" id="2_6tpex"]
[ext_resource type="Material" uid="uid://bmer6jms7s2ag" path="res://Resources/TextBobbing.tres" id="3_qnnw2"]
[ext_resource type="FontFile" uid="uid://btve8ngv4mvnd" path="res://Art/Fonts/Crang.ttf" id="4_vbebs"]
[ext_resource type="Shader" path="res://Shaders/StartMenu.gdshader" id="5_fi22k"]
[ext_resource type="FontFile" uid="uid://ceyy4deiq2wlb" path="res://Art/Fonts/' Mono Bold.ttf" id="6_6ms53"]
[ext_resource type="Texture2D" uid="uid://k87m7iusx0y7" path="res://Art/CheckboxChecked.png" id="7_f3bch"]
[ext_resource type="Texture2D" uid="uid://nckdiok5jmnj" path="res://Art/CheckboxUnchecked.png" id="8_2ebl2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n3s8l"]
resource_local_to_scene = true
shader = ExtResource("5_fi22k")
shader_parameter/height = 1.0
shader_parameter/frequency = 10.0
shader_parameter/speed = 2.0

[node name="Video" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_byv3s")

[node name="CRTOverlay" parent="." instance=ExtResource("2_6tpex")]

[node name="Label" type="Label" parent="."]
material = ExtResource("3_qnnw2")
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -273.0
offset_top = 80.0
offset_right = 274.0
offset_bottom = 152.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_vbebs")
theme_override_font_sizes/font_size = 58
text = "VIDEO"
horizontal_alignment = 1

[node name="FullscreenText" type="Label" parent="."]
visible = false
material = SubResource("ShaderMaterial_n3s8l")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -111.0
offset_top = -61.0
offset_right = 111.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.439049, 0.439049, 0.439049, 1)
theme_override_fonts/font = ExtResource("6_6ms53")
theme_override_font_sizes/font_size = 24
text = "Fullscreen Toggled"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = 227.0
offset_right = 40.0
offset_bottom = 269.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_6ms53")
theme_override_font_sizes/font_size = 28
text = "BACK"

[node name="FullscreenButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -188.5
offset_top = -21.0
offset_right = 188.5
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_6ms53")
theme_override_font_sizes/font_size = 28
text = "TOGGLE FULLSCREEN"
icon_alignment = 1

[node name="CRTToggleButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -188.0
offset_top = 35.0
offset_right = 139.0
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_6ms53")
theme_override_font_sizes/font_size = 28
text = "CRT OVERLAY"
icon_alignment = 1

[node name="CRTCheckbox" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 471.0
offset_top = 360.0
offset_right = 511.0
offset_bottom = 400.0
theme_override_icons/checked = ExtResource("7_f3bch")
theme_override_icons/unchecked = ExtResource("8_2ebl2")
button_pressed = true

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="FullscreenButton" to="." method="_on_fullscreen_button_pressed"]
[connection signal="pressed" from="CRTToggleButton" to="." method="_on_crt_toggle_button_pressed"]
[connection signal="pressed" from="CRTCheckbox" to="." method="_on_crt_toggle_button_pressed"]
